--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-model": "^4.3.1",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
